Fix engine_forkchoiceUpdated and engine_consensusValidated to pass request object instead of a list of parameters